--- a/views/login.html
+++ b/views/login.html
@@ -47,8 +47,8 @@
                     </p>
                     <p><span><a href="">Forgot password ?</a></span><a class="btn btn-primary pull-right normal-login" ng-click="userlogin(login)" href="">Login</a>
                     
-                    <a class="btn btn-primary pull-right fb-login" href="http://localhost/admin/index.php/hauth/login/Facebook?returnurl=http://localhost/magicmirror"><i class="fa fa-facebook"></i>Facebook</a>
-                                <a class="btn btn-primary pull-right g-login" href="http://localhost/admin/index.php/hauth/login/Google?returnurl=http://localhost/magicmirror"><i class="fa fa-google-plus"></i>Google+</a>
+                    <a class="btn btn-primary pull-right fb-login" href="http://lylaloves.co.uk/admin/index.php/hauth/login/Facebook?returnurl=http://lylaloves.co.uk/"><i class="fa fa-facebook"></i>Facebook</a>
+                                <a class="btn btn-primary pull-right g-login" href="http://lylaloves.co.uk/admin/index.php/hauth/login/Google?returnurl=http://lylaloves.co.uk/"><i class="fa fa-google-plus"></i>Google+</a>
                     </p>
                 </div>
             </div>
