category name change

--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -5,16 +5,16 @@
 
             <ul class="submenudown">
                 <li>
-                    <a ng-click="template.gourl('/category/7');">Bags</a>
+                    <a ng-click="template.gourl('/category/Bags');">Bags</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/8');">Scarves</a>
+                    <a ng-click="template.gourl('/category/Scarves');">Scarves</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/34');">Hair</a>
+                    <a ng-click="template.gourl('/category/Hair');">Hair</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/35');">Phone Cases</a>
+                    <a ng-click="template.gourl('/category/Phone Cases');">Phone Cases</a>
                 </li>
             </ul>
         </div>
