--- a/views/jewellerysubmenu.html
+++ b/views/jewellerysubmenu.html
@@ -5,22 +5,22 @@
             
             <ul class="submenudown">
                 <li>
-                    <a ng-click="template.gourl('/category/2');">Necklaces</a>
+                    <a ng-click="template.gourl('/category/Necklaces');">Necklaces</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/36');">Pendants</a>
+                    <a ng-click="template.gourl('/category/Pendants');">Pendants</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/3');">Bracelets</a>
+                    <a ng-click="template.gourl('/category/Bracelets');">Bracelets</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/4');">Earrings</a>
+                    <a ng-click="template.gourl('/category/Earrings');">Earrings</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/37');">Earcuffs</a>
+                    <a ng-click="template.gourl('/category/Earcuffs');">Earcuffs</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/5');">Rings</a>
+                    <a ng-click="template.gourl('/category/Rings');">Rings</a>
                 </li>
                 
                 
