--- a/views/navigation.html
+++ b/views/navigation.html
@@ -6,7 +6,7 @@
         <ul class="nav nav-pills font mainmenu" ng-class="ishome" >
            
             <li>
-                <a ng-click="template.gourl('/category/31');">Just In</a>
+                <a ng-click="template.gourl('/category/Just In');">Just In</a>
                 
             </li>
             <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
@@ -21,7 +21,7 @@
                 </div>
             </li>
             <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
-                <a  ng-click="template.gourl('/category/6');">Accesories</a>
+                <a  ng-click="template.gourl('/category/Accesories');">Accesories</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
