--- a/views/jewellerysubmenu.html
+++ b/views/jewellerysubmenu.html
@@ -5,22 +5,22 @@
             
             <ul class="submenudown">
                 <li>
-                    <a ng-click="template.gourl('/category/Necklaces');">Necklaces</a>
+                    <a ng-click="template.gourl('/category/necklaces');">Necklaces</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Pendants');">Pendants</a>
+                    <a ng-click="template.gourl('/category/pendants');">Pendants</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Bracelets');">Bracelets</a>
+                    <a ng-click="template.gourl('/category/bracelets');">Bracelets</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Earrings');">Earrings</a>
+                    <a ng-click="template.gourl('/category/earrings');">Earrings</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Earcuffs');">Earcuffs</a>
+                    <a ng-click="template.gourl('/category/earcuffs');">Earcuffs</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Rings');">Rings</a>
+                    <a ng-click="template.gourl('/category/rings');">Rings</a>
                 </li>
                 
                 
