--- a/views/newinmenu.html
+++ b/views/newinmenu.html
@@ -5,16 +5,16 @@
            
             <ul class="submenudown">
                 <li>
-                    <a ng-click="template.gourl('/category/Necklace');">Necklace</a>
+                    <a ng-click="template.gourl('/category/necklace');">Necklace</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Bracelets');">Bracelets</a>
+                    <a ng-click="template.gourl('/category/bracelets');">Bracelets</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Earings');">Earings</a>
+                    <a ng-click="template.gourl('/category/earings');">Earings</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Rings');">Rings</a>
+                    <a ng-click="template.gourl('/category/rings');">Rings</a>
                 </li>
             </ul>
         </div>
