--- a/views/accessoriessubmenu.html
+++ b/views/accessoriessubmenu.html
@@ -5,16 +5,16 @@
 
             <ul class="submenudown">
                 <li>
-                    <a ng-click="template.gourl('/category/Bags');">Bags</a>
+                    <a ng-click="template.gourl('/category/bags');">Bags</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Scarves');">Scarves</a>
+                    <a ng-click="template.gourl('/category/scarves');">Scarves</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Hair');">Hair</a>
+                    <a ng-click="template.gourl('/category/hair');">Hair</a>
                 </li>
                 <li>
-                    <a ng-click="template.gourl('/category/Phone Cases');">Phone Cases</a>
+                    <a ng-click="template.gourl('/category/phone cases');">Phone Cases</a>
                 </li>
             </ul>
         </div>
