--- a/views/navigationhome.html
+++ b/views/navigationhome.html
@@ -4,7 +4,7 @@
             <ul class="nav nav-pills font mainmenu" ng-class="ishome">
 
                 <li>
-                    <a ng-click="template.gourl('/category/Just In');">Just In</a>
+                    <a ng-click="template.gourl('/category/just in');">Just In</a>
 
                 </li>
                 <!--li ng-mouseover="showsub(5)" ng-mouseleave="hidesub(5)" style="position:relative;">
@@ -20,7 +20,7 @@
                 </li>
                 
                 <li ng-mouseover="showsub(1)" ng-mouseleave="hidesub(1)" style="position:relative;">
-                <a ng-click="template.gourl('/category/Accesories');">Accesories</a>
+                <a ng-click="template.gourl('/category/accesories');">Accesories</a>
                 <div class="megamenu megamenu2" ng-include src="submenuval[1]" ng-show="submenu[1]">
                 </div>
             </li>
