--- a/views/lylaloves.html
+++ b/views/lylaloves.html
@@ -1,4 +1,5 @@
 <div class="content">
+<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/97132451&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
     <div class="contenttop">
         <div class="row">
             <div class="col-xs-4">
@@ -32,4 +33,5 @@
         </div>
 
     </div>
+    
 </div>
