--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -960,19 +960,21 @@ button.btnss-primary {
     height: 50px;
 }
 .cart-set {
-    position: fixed;
-    right: 0px;
-    bottom: 5px;
-    font-size: 16px;
-    background: rgba(216, 242, 239, 1);
-    padding: 1px 10px 0px 10px;
-    border-radius: 0px;
-    z-index: 999999;
-    float: right;
+    position: absolute;
+  right: 0px;
+  bottom: 0px;
+  font-size: 16px;
+  background: rgba(216, 242, 239, 1);
+  
+    padding: 9px 10px 9px 10px;
+  border-radius: 0px;
+  z-index: 999999;
+  float: right;
+  /* width: 600px; */
 /*      width: 600px;*/
 }
 .cart-set img {
-    height: 30px;
+    height: 39px;
 }
 /*
 .cart-set:after {
@@ -981,6 +983,24 @@ button.btnss-primary {
     top: 27px;    right: -14px;
 }*/
 
+.det-cart {
+  position: fixed;
+  z-index: 99999999999;
+  right: 0px;
+  bottom: 5px;
+  width: 840px;
+}
+.cart-det {
+  position: absolute;
+  float: right;
+  /* z-index: 99999999; */
+  right: -580px;
+  background: rgb(216, 242, 239);
+  padding: 8px;
+  bottom: 0px;
+    transition: all ease 1s;
+
+}
 .step-set ul li {} .step-set {
     /* text-align: center; */
     /* border: 1px solid; */
@@ -1107,14 +1127,74 @@ span.currencytobe {
   bottom: 0;
   display: none;
 }
-.cart-det{
-  position: relative;
-  float: left;
-}
+
 .cart-det td, th {
   padding: 2px 15px 2px 11px;
   border: 1px solid rgb(0, 227, 227);
   text-align: center;
   font-size: 15px;
   color: #000;
+}
+.det-cart:hover .cart-det{
+     right: 127px; 
+}
+.free-set {
+    border: 1px solid #27F0E8;
+    width: 150px;
+    text-align: center;
+    padding: 2px 0px 3px 0px;
+    margin: 0;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+}
+.amount-set {
+    border: 1px solid #27f0e8;
+    width: 150px;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    border-radius: 8px;
+}
+
+.free-set p {
+     margin: 0;
+  padding: 0;
+  
+     line-height: 15px;
+  color: #696969;
+  
+     font-size: 12px;
+  font-weight: normal;
+}
+
+.free-set span {
+    color: #27F0E8;
+    font-weight: bold;
+    font-size: 20px;
+}
+.symbol {
+  width: 30%;
+  padding: 32px 13px;
+  border-radius: 4px 0px 0px 4px;
+  background: #27f0e8;
+  display: inline-block;
+  text-align: center;
+}
+.value {
+  width: 70%;
+  padding-top: 9px;
+  float: right;
+  display: inline-block;
+  text-align: center;
+}
+.value h1 {
+  padding: 0px;
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(39, 240, 232);
+}
+.value p{
+  line-height: 25px;
+  font-size: 12px;
 }
