smart cart done

--- a/views/footer.html
+++ b/views/footer.html
@@ -32,10 +32,7 @@
                                           <div class="col-md-3" style="  width: 180px;">
                                               <div class="panel" style="  width: 170px;margin-bottom:0px;border:0px">
                                               <div class="symbol">
-<!--
-                                                  <i class="fa fa-money" style="  color: #fff;
-  font-size: 24px;"></i>
--->
+                                                 <img src="../img/coin16.png">
                                               </div>
                                               <div class="value">
                                                   <h1>15.00</h1>
@@ -46,10 +43,7 @@
                                             <div class="col-md-3" style="  width: 200px;">
                                               <div class="panel" style="  width: 170px;margin-bottom:0px;border:0px">
                                               <div class="symbol">
-<!--
-                                                  <i class="fa fa-money" style="  color: #fff;
-  font-size: 24px;"></i>
--->
+                                                 <img src="../img/gifts2.png">
                                               </div>
                                               <div class="value">
                                                   <h1>15.00</h1>
@@ -59,7 +53,7 @@
                                           </div>
                                          
                                           <div class="col-md-3" style="  width: 180px;">
-                                              <a ng-click="template.gourl('/checkout')"  class="btns btns-primary pull-right" style="  padding: 10px 25px;  margin-top: 12px;">Express checkout</a>
+                                              <a ng-click="template.gourl('/checkout')"  class="btns btns-primary pull-right" style="  padding: 10px 25px;  margin-top: 12px;">Express Checkout</a>
                                           </div>
                                       </div>
 <!--
