sum changes for linking

--- a/lib/css/main1.css
+++ b/lib/css/main1.css
@@ -333,7 +333,7 @@ div.megamenu {
     position: absolute;
     width: 60%;
     left: 20%;
-    z-index: 100;
+    z-index: 999999999999;
     background: rgba(246, 246, 246, 0.59);
     padding: 10px;
     margin: 0 auto;
